--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
+    <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="display"><p id="display-text">Tic-Tac-Toe!</p></div>
+        <div id="cell-container"></div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
