add button container and game over display text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div id="container">
         <div id="display"><p id="display-text">Tic-Tac-Toe!</p></div>
         <div id="cell-container"></div>
+        <div id="game-over-display"><p id="game-over-display-text"></p></div>
+        <div id="button-container"></div>
     </div>
 </body>
 <script src="script.js"></script>
